# noaa-nwm

./: .buildinfo  .gitignore  .pre-commit-config.yaml  01-noaa-nwm-example.html  02-problems.html  03-using-kerchunk.html  04-timeseries.html  05-tabular.html  Makefile  Problems.ipynb  README.md  Using Kerchunk.ipynb  genindex.html  intro.html  noaa-nwm-example.html  noaa-nwm-example.ipynb  noaanwm.py  nwm-tabular.html  nwm-tabular.ipynb  objects.inv  problems.html  pyproject.toml  search.html  searchindex.js  timeseries.html  using-kerchunk.html  using-kerchunk.ipynb
.github/workflows/: deploy-book.yaml
_sources/: 01-noaa-nwm-example.ipynb  02-problems.ipynb  03-using-kerchunk.ipynb  04-timeseries.ipynb  05-tabular.ipynb  intro.md  noaa-nwm-example.ipynb  nwm-tabular.ipynb  problems.ipynb  timeseries.ipynb  using-kerchunk.ipynb
content/: 01-noaa-nwm-example.ipynb  02-problems.ipynb  03-using-kerchunk.ipynb  04-timeseries.ipynb  05-tabular.ipynb  _config.yml  _toc.yml  intro.md  noaa-nwm-example.ipynb  nwm-tabular.ipynb  problems.ipynb  timeseries.ipynb
content/solutions/: noaa-nwm-example_plot_accet.py
deploy/: README.md  gateway-config.yaml
processing/: Dockerfile  LICENSE  README.md  cluster.yaml  log.txt  noaanwm.py  pyproject.toml  rechunk_nwm.py  run_kerchunk.py  run_zarr.py
terraform/: aks.tf  providers.tf
