[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "noaanwm"
authors = [{name = "Tom Augspurger", email = "taugspurger@microsoft.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "fsspec",
    "kerchunk",
    "pyarrow",
    "fastparquet",
    "adlfs",
    "dask[complete]==2023.3.1",
    "h5py",
    "dask-kubernetes",
    "jupyter",
    "notebook",
    "jupyterlab",
    "xarray",
    "dask-geopandas"
]